--- a/reshaping_matches_csv.ipynb
+++ b/reshaping_matches_csv.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import matplotlib as plt\n",
     "import seaborn as sns"
    ]
   },
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +113,7 @@
        "4               NaN       L   94KG  2016  Aaron Johnson               0"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +160,7 @@
        "Name: outcome_binary, Length: 417, dtype: float64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +246,7 @@
        "4        Abraham Marte  0.615385"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,10 +254,9 @@
    "source": [
     "name_list = list(df.name.unique())\n",
     "name_list.sort() #the groupby method already sorted my win_percentages series, so I need to do the same for my name_list\n",
-    "name_list\n",
     "\n",
-    "new_df = pd.DataFrame({'name':name_list, 'win_rate':list(win_rates)})\n",
-    "new_df.head()"
+    "df_stats = pd.DataFrame({'name':name_list, 'win_rate':list(win_rates)})\n",
+    "df_stats.head()"
    ]
   },
   {
@@ -283,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
